--- a/assets/home.scss
+++ b/assets/home.scss
@@ -344,6 +344,7 @@
                     background-position: center center;
                     border-radius: 10px;
                     -webkit-border-radius: 10px;
+                    background-size: 21px auto !important;
                 }
 
                 .name {
