--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ Theme Name: Nextcloud Theme Git
 Author: Hipinspire
 Author URI: https://www.hipinspire.com/
 Version: 1.0
+Text Domain: nextcloud
 */
 
 .cat-block ul li {
