--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6716,7 +6716,7 @@ p {
         text-align: center;
 
         #loadNews {
-            display: none;
+            //display: none;
             margin: 30px auto 50px;
         }
     }
@@ -6777,23 +6777,51 @@ p {
 
     .post-img {
         width: 100%;
+        /*
         height: 0px;
         padding-top: 51%;
-        background-color: #30B6FF;
+        */
+        //max-height: 217px;
+        aspect-ratio: 16/9;
+        overflow: hidden;
+        background-color: #fff;
         background-repeat: no-repeat;
         background-position: center center;
-        background-size: 100% auto;;
+        background-size: 100% auto;
+        
+        a {
+            display: block;
+            height: 100%;
+            width: 100%;
+
+            img.feat_img {
+                /*
+                height: auto;
+                width: 100%;
+                */
+                height: 100%;
+                width: auto;
+                object-fit: contain;
+                aspect-ratio: 16/9;
+
+            }
+        }
+        
     }
 
     .post-body {
         padding: 20px 25px 75px;
 
         h4 {
-            color: #0082C9;
+            color: $mainColor;
             font-size: 24px;
             font-weight: 600;
             line-height: 30px;
             margin: 0px 0px 10px;
+
+            a {
+                color: $mainColor;
+            }
         }
 
         p {
@@ -8517,9 +8545,11 @@ p {
   padding: 5px;
 }
 
+/*
 .wpml-ls-item:not(.wpml-ls-item-en):not(.wpml-ls-item-de):not(.wpml-ls-item-fr) {
     display: none;
 }
+*/
 
 /*Customize this if you want*/
 .wpml-floating-language-switcher {
@@ -8568,11 +8598,13 @@ p {
             }
         }
 
-
-        &.case_studies_titlebar {
-
-
+        &.enterprises_titlebar  {
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center right;
         }
+
+
 
         .page-title{
             margin-bottom: 15px !important;
@@ -8814,7 +8846,7 @@ p {
     padding-top: 4rem !important;
     padding-bottom: 4rem !important;
 
-    background: url(/wp-content/uploads/2022/08/nextcloud.png) !important;
+    //background: url(/wp-content/uploads/2022/08/nextcloud.png) !important;
     background-size: 47% auto !important;
     background-repeat: no-repeat !important;
     background-position: bottom -115px right !important;
@@ -8833,6 +8865,16 @@ p {
     }
 
 
+    &.how-enterprises {
+        //background-color: rgba(0,130,201,0.14);
+
+    }
+
+}
+
+
+.lightBG {
+    background-color: $lightBG;
 }
 
 .nc-sep-logo {
@@ -8885,11 +8927,75 @@ ul.nc-list {
                     padding: 1rem 0.4rem;
                 }
             }
+        }
+
+        &.with_categories {
+
+            tr {
+
+                &.has_cat {
+                    &:first-child {
+                        border-right: 0 !important;
+                    }
+
+                    td:nth-child(2) {
+                        border-right: 1px solid #DFDFDF;
+                    }
+                }
+
+                td {
+                    width: auto !important;
+
+                    &:first-child {
+                        text-align: center !important;
+                        border-right: 1px solid #DFDFDF;
+                    }
+
+                    
+                    &:last-child {
+                        border-left: 0 !important;
+                        border-right: 0 !important;
+                    }
+                    
+        
+
+                    &.table_cat {
+                        background-color: $communityColor;
+
+                        padding: 1rem 0 !important;
+                        width: 7rem !important;
+                        border-bottom: 1px solid #C2C3C4;
+
+                        &:last-of-type {
+                            border-bottom: 0 !important;
+                        }
+
+                        .td_content {
+                            transform: rotate(-90deg);
+                        }
+
+                    }
+
+                    &.enterprise {
+                        border-radius: 15px 15px 0 0 !important;
+                    }
+                }
+            }
+
+            thead {
+                tr {
+                    td {
+                        border-right: 0 !important;
+                    }
+                }
+                
+            }
+
 
         }
 
         thead {
-            font-weight: 700;
+            
 
             tr{
                 line-height: 20px;
@@ -8897,10 +9003,12 @@ ul.nc-list {
                 td {
 
                     &.community {
+                        font-weight: 700;
                         background-color: $communityColor;
                         border-radius: 15px 0 0 0;
                     }
                     &.enterprise {
+                        font-weight: 700;
                         border-radius: 0 15px 0 0;
                         background-color: $mainColor;
                         color: #fff;
