--- a/assets/fonts.scss
+++ b/assets/fonts.scss
@@ -12,12 +12,12 @@
          url('../fonts/m-plus-1-v6-japanese-regular.svg#MPLUS1') format('svg'); /* Legacy iOS */
 
     unicode-range: U+4e00-9fbf, U+3040-309f, U+30a0-30ff;
-  }
+}
   
-  /* m-plus-1-700 - japanese */
-  @font-face {
+/* m-plus-1-700 - japanese */
+@font-face {
     font-family: 'M PLUS 1';
-    font-style: bold;
+    font-style: normal;
     font-weight: 700;
     src: url('../fonts/m-plus-1-v6-japanese-700.eot'); /* IE9 Compat Modes */
     src: local(''),
@@ -28,4 +28,44 @@
          url('../fonts/m-plus-1-v6-japanese-700.svg#MPLUS1') format('svg'); /* Legacy iOS */
 
     unicode-range: U+4e00-9fbf, U+3040-309f, U+30a0-30ff;     
-  }
+}
+
+@font-face {
+     font-family: 'Open Sans';
+     font-style: normal;
+     font-weight: 400;
+     src: url('../fonts/OpenSansRegular.eot'); /* IE9 Compat Modes */
+     src: local(''),
+          url('../fonts/OpenSansRegular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('../fonts/OpenSansRegular.woff2') format('woff2'), /* Super Modern Browsers */
+          url('../fonts/OpenSansRegular.woff') format('woff'), /* Modern Browsers */
+          url('../fonts/OpenSansRegular.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('../fonts/OpenSansRegular.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+     font-family: 'Open Sans';
+     font-style: normal;
+     font-weight: 600;
+     src: url('../fonts/OpenSansSemiBold.eot'); /* IE9 Compat Modes */
+     src: local(''),
+          url('../fonts/OpenSansSemiBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('../fonts/OpenSansSemiBold.woff2') format('woff2'), /* Super Modern Browsers */
+          url('../fonts/OpenSansSemiBold.woff') format('woff'), /* Modern Browsers */
+          url('../fonts/OpenSansSemiBold.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('../fonts/OpenSansSemiBold.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
+
+@font-face {
+     font-family: 'Open Sans';
+     font-style: normal;
+     font-weight: 700;
+     src: url('../fonts/OpenSansBold.eot'); /* IE9 Compat Modes */
+     src: local(''),
+          url('../fonts/OpenSansBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('../fonts/OpenSansBold.woff2') format('woff2'), /* Super Modern Browsers */
+          url('../fonts/OpenSansBold.woff') format('woff'), /* Modern Browsers */
+          url('../fonts/OpenSansBold.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('../fonts/OpenSansBold.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
